# flow-mlir

./: CMakeLists.txt  README.md
example/: affine.mlir  flow.mlir
flow-opt/: CMakeLists.txt  flow-opt.cpp
include/: FlowDialect.h  FlowDialect.td  FlowOps.h  FlowOps.td
include/Dialect/: CMakeLists.txt
include/Dialect/Flow/: CMakeLists.txt  Combine.td  FlowDialect.h  FlowDialect.td  FlowOps.h  FlowOps.td  FlowTypes.h  FlowTypes.td  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  Traits.h
include/Dialect/FlowGPU/: CMakeLists.txt  FlowGPUDialect.td  FlowGPUOps.td
lib/: CMakeLists.txt  FlowDialect.cpp  FlowOps.cpp  FlowTypes.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInference.cpp  Traits.cpp
